--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-slingshot",
+  "name": "book-trade",
   "version": "4.0.0",
-  "description": "Starter kit for creating apps with React and Redux",
+  "description": "BookTrade App - freeCodeCamp Project",
   "scripts": {
     "remove-demo": "babel-node tools/removeDemo.js",
     "start-message": "babel-node tools/startMessage.js",
@@ -21,15 +21,19 @@
     "test:cover:travis": "babel-node isparta cover --root src --report lcovonly _mocha -- --require ./tools/testSetup.js \"src/**/*.spec.js\" && cat ./coverage/lcov.info | coveralls.js",
     "test:watch": "npm run test -- --watch"
   },
-  "author": "Cory House",
+  "author": "Goran Rakić",
   "license": "MIT",
   "dependencies": {
+    "bootstrap": "3.3.6",
     "object-assign": "4.1.0",
     "react": "15.0.2",
+    "react-bootstrap": "0.29.4",
     "react-dom": "15.0.2",
     "react-redux": "4.4.5",
     "react-router": "2.4.0",
-    "redux": "3.5.2"
+    "react-router-bootstrap": "0.23.0",
+    "redux": "3.5.2",
+    "redux-thunk": "2.1.0"
   },
   "devDependencies": {
     "babel-cli": "6.8.0",
@@ -90,6 +94,6 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/coryhouse/react-slingshot"
+    "url": ""
   }
 }
