--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "remove-demo": "babel-node tools/removeDemo.js",
     "start-message": "babel-node tools/startMessage.js",
     "prestart": "npm-run-all --parallel start-message remove-dist",
-    "start": "npm-run-all --parallel test:watch open:src lint:watch",
+    "start": "npm-run-all --parallel test:watch open:dev lint:watch",
     "open:src": "babel-node tools/srcServer.js",
+    "open:dev": "babel-node server/index.js",
     "open:dist": "babel-node tools/distServer.js",
     "lint": "esw webpack.config.* src tools",
     "lint:watch": "npm run lint -- --watch",
@@ -15,7 +16,7 @@
     "remove-dist": "rimraf ./dist",
     "build:html": "babel-node tools/buildHtml.js",
     "prebuild": "npm run clean-dist && npm run build:html && npm run lint && npm run test",
-    "build": "babel-node tools/build.js && npm run open:dist",
+    "build": "babel-node tools/build.js && npm run open:dev",
     "test": "mocha tools/testSetup.js \"src/**/*.spec.js\" --reporter progress",
     "test:cover": "babel-node node_modules/isparta/bin/isparta cover --root src --report html node_modules/mocha/bin/_mocha -- --require ./tools/testSetup.js \"src/**/*.spec.js\" --reporter progress",
     "test:cover:travis": "babel-node isparta cover --root src --report lcovonly _mocha -- --require ./tools/testSetup.js \"src/**/*.spec.js\" && cat ./coverage/lcov.info | coveralls.js",
@@ -25,7 +26,10 @@
   "license": "MIT",
   "dependencies": {
     "bootstrap": "3.3.6",
+    "compression": "1.6.2",
+    "express": "4.13.4",
     "object-assign": "4.1.0",
+    "open": "0.0.5",
     "react": "15.0.2",
     "react-bootstrap": "0.29.4",
     "react-dom": "15.0.2",
