added server side api

--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "remove-demo": "babel-node tools/removeDemo.js",
     "start-message": "babel-node tools/startMessage.js",
     "prestart": "npm-run-all --parallel start-message remove-dist",
-    "start": "npm-run-all --parallel test:watch open:dev lint:watch",
+    "start": "npm-run-all --parallel open:dev lint:watch",
     "open:src": "babel-node tools/srcServer.js",
-    "open:dev": "babel-node server/index.js",
+    "open:dev": "nodemon server/index.js --exec babel-node --presets es2015,stage-2",
     "open:dist": "babel-node tools/distServer.js",
     "lint": "esw webpack.config.* src tools",
     "lint:watch": "npm run lint -- --watch",
@@ -25,11 +25,21 @@
   "author": "Goran Rakić",
   "license": "MIT",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "1.15.1",
     "bootstrap": "3.3.6",
     "compression": "1.6.2",
+    "cookie-parser": "1.4.3",
     "express": "4.13.4",
+    "express-session": "1.13.0",
+    "mongoose": "4.4.20",
+    "morgan": "1.7.0",
+    "nanoajax": "0.4.3",
     "object-assign": "4.1.0",
     "open": "0.0.5",
+    "passport": "0.3.2",
+    "passport-local": "1.0.0",
+    "passport-local-mongoose": "4.0.0",
     "react": "15.0.2",
     "react-bootstrap": "0.29.4",
     "react-dom": "15.0.2",
